<resources>

    <!--Everything is tied to a view, it first appears in-->
    <!-- activity_main -->
    <string name="app_name">Point</string>
    <string name="description_0">The easiest way "\n" to meet friends nearby</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    <!-- activity_sign_up -->
    <string name="description_1">Fill in your personal information</string>
    <string name="already_have">Already have an account?</string>
    <string name="go_back_icon">Go back.</string>
    <string name="error_string_0">Please fill all the fields</string>
    <string name="description_3">Who are we looking for?</string>
    <string name="description_4">Verification</string>
    <string name="next_text_view">Next</string>
    <string name="do_not_have">Do not have an account?</string>

    <!-- activity_log_in -->

    <!-- fragment_sign_up_one -->
    <string name="name_hint">Name</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="hint_calendar_value">01.01.1920 </string>
    <string name="calendar_carete_description">calendar_carete</string>
    <string name="calendar_view_description">Choose your date of birth.</string>

    <!-- fragment_sign_up_two -->
    <string name="gender_text_view_all">All genders</string>
    <string name="age_text_view">Age</string>
    <string name="age_group_zero">18–22</string>
    <string name="age_group_one">23–27</string>
    <string name="age_group_two">28–35</string>
    <string name="age_group_three">36–45</string>
    <string name="age_group_four">46+</string>
    <string name="age_group_five">All ages</string>
    <string name="skip_text_view">Skip</string>

    <!-- fragment_get_code -->
    <string name="get_a_verification_code_button">Get a verification code</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="description_2">Sign in with your phone number</string>
    <string name="wrong_phone_number_textview">Wrong phone number</string>

    <!-- fragment_send_code -->
    <string name="privacy_policy_textview">I have read and agree to "\n"the Privacy Policy</string>
    <string name="error_string_1">Incorrect code</string>
    <string name="try_again_textview">Try again</string>
    <string name="go_button">Go!</string>

    <!-- home_activity -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="verification_code_edit_text">Verification code</string>

    <!-- fragment_settings -->
    <string name="settings_description_0">Write a few words about "\n"yourself to raise match chance </string>
    <string name="phone_number">+000000000</string>
    <string name="privacy_field">Privacy</string>
    <string name="about_field">About</string>
    <string name="setting_option_0">Friends</string>
    <string name="setting_option_1">Notifications</string>
    <string name="setting_option_2">Privacy Policy</string>
    <string name="setting_option_3">Contact Us</string>
    <string name="setting_option_4">Rate the App</string>

    <!-- fragment_search -->
    <string name="search_description_0">Tap on point "\n"to share your location</string>

    <!-- settings activity -->
    <string name="settings_top_text">Edit profile</string>
    <string name="general_field">General</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preferences_field">Preferences</string>

    <!-- alert dialog -->
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Yes</string>
    <string name="alert_title_0">Save changes</string>
    <string name="alert_title_1">Exit</string>
    <string name="alert_title_2">Error!</string>
    <string name="alert_title_3">Empty fields</string>
    <string name="alert_title_4">Hey! Point Info:</string>
    <string name="alert_text_0">Do you want to save the changes?</string>
    <string name="alert_text_1">Do you want to exit? "\n"Changes will not be applied.</string>
    <string name="alert_text_2">Some Error occurred!</string>
    <string name="alert_text_3">Some fields are empty! "\n"Please, fill them before saving the changes.</string>
    <string name="alert_text_4">Your Match has disconnected!</string>

    <!-- chat activity -->
    <string name="message_hint">Type your message…</string>
    <string name="message_time_text">00:00</string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- fragment_chat -->
    <string name="chat_fragment_description_0">Oops!</string>
    <string name="chat_fragment_description_1">You do not have any messages yet.</string>
    <string name="chat_fragment_description_2">Refresh Inbox</string>
    <string name="text_view_chat_finished">This chat is finished for now!</string>

</resources>
