<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@id/constraint_layout_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.07297"

        android:id="@+id/space_0"
        android:alpha="0"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gender_text_view_0"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.07297"

        android:id="@+id/gender_text_view_0"
        android:text="@string/gender_text"
        android:textColor="@color/colorIndicatorPurple"
        android:fontFamily="@font/roboto_light"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeStepGranularity="1sp"
        android:gravity="start"

        android:layout_marginStart="3dp"
        app:layout_constraintTop_toBottomOf="@id/space_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraint_layout_1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.4"

        android:id="@+id/constraint_layout_1"

        app:layout_constraintTop_toBottomOf="@id/gender_text_view_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/age_text_view_0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:id="@+id/linear_layout_0"
            app:layout_constraintVertical_weight="0.25"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider_0">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginStart="3dp"
                android:gravity="center"
                android:textColor="@color/colorDescriptionGrey"
                android:fontFamily="@font/roboto_regular"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"

                android:id="@+id/gender_text_view_male"
                android:text="@string/male_text"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginEnd="3dp"
                android:textOff=""
                android:textOn=""
                android:id="@+id/gender_male_button"
                android:background="@drawable/accept_button_custom" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintVertical_weight="0.00675"

            android:background="@color/colorDescriptionGrey"
            android:id="@+id/divider_0"

            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_0"
            app:layout_constraintBottom_toTopOf="@id/linear_layout_1" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintVertical_weight="0.31081"

            app:layout_constraintBottom_toTopOf="@id/divider_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_0">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/gender_text_view_female"
                android:layout_width="wrap_content"

                android:gravity="center"
                android:textColor="@color/colorDescriptionGrey"

                android:layout_marginStart="3dp"
                android:layout_height="match_parent"
                android:text="@string/female_text"
                android:fontFamily="@font/roboto_regular"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginEnd="3dp"
                android:textOff=""
                android:textOn=""
                android:id="@+id/gender_female_button"
                android:background="@drawable/accept_button_custom" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintVertical_weight="0.00675"

            android:background="@color/colorDescriptionGrey"
            android:id="@+id/divider_1"

            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_1"
            app:layout_constraintBottom_toTopOf="@id/linear_layout_2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:id="@+id/linear_layout_2"
            app:layout_constraintVertical_weight="0.25"

            app:layout_constraintTop_toBottomOf="@id/divider_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space_1">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center"
                android:textColor="@color/colorDescriptionGrey"

                android:layout_marginStart="3dp"
                android:id="@+id/gender_text_view_allgender"
                android:text="@string/gender_text_view_all"
                android:fontFamily="@font/roboto_regular"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginEnd="3dp"
                android:textOff=""
                android:textOn=""
                android:id="@+id/gender_all_gender_button"
                android:background="@drawable/accept_button_custom" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="0.18918"

            android:id="@+id/space_1"
            android:alpha="0"

            app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.09729"

        android:id="@+id/age_text_view_0"
        android:text="@string/age_text_view"
        android:textColor="@color/colorIndicatorPurple"
        android:fontFamily="@font/roboto_light"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeStepGranularity="1sp"
        android:gravity="start"

        android:layout_marginStart="3dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/grid_layout_0"/>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.24324"

        android:id="@+id/grid_layout_0"
        android:columnCount="5"

        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintTop_toBottomOf="@id/age_text_view_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_0">

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.3977"
            android:layout_columnWeight="0.2789"
            android:layout_rowSpan="2"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_zero"
            android:textOff="@string/age_group_zero"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_0"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_columnWeight="0.0815"

            android:id="@+id/grid_space_0"
            android:alpha="0" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="0.2789"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_one"
            android:textOff="@string/age_group_one"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_1"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_columnWeight="0.0815"

            android:id="@+id/grid_space_1"
            android:alpha="0" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="0.2789"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_two"
            android:textOff="@string/age_group_two"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_2"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2045"
            android:layout_columnSpan="5"

            android:id="@+id/grid_space_vertical"
            android:alpha="0" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.3977"
            android:layout_columnWeight="0.2789"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_three"
            android:textOff="@string/age_group_three"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_3"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_columnWeight="0.0815"

            android:id="@+id/grid_space_2"
            android:alpha="0" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="0.2789"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_four"
            android:textOff="@string/age_group_four"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_4"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_columnWeight="0.0815"

            android:id="@+id/grid_space_3"
            android:alpha="0" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="0.2789"

            android:textColor="@drawable/field_template_color"
            android:textOn="@string/age_group_five"
            android:textOff="@string/age_group_five"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat"

            android:id="@+id/age_group_button_5"
            android:background="@drawable/field_template_custom"
            tools:ignore="ButtonStyle" />
    </GridLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_0"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.87837" />

</android.support.constraint.ConstraintLayout>