<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/constraint_layout_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.18783" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.748648" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/verification_code_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/go_button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_0"
        app:layout_constraintVertical_weight="0.73544">

        <EditText
            android:id="@+id/edit_text_0"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="start"
            android:hint="@string/verification_code_edit_text"
            android:inputType="numberDecimal"
            android:paddingTop="10dp"
            android:textColorHint="@color/colorIndicatorPurple"
            android:textSize="14sp"
            app:layout_constraintHeight_max="40dp"

            android:theme="@style/EditTextName"
            app:layout_constraintBottom_toTopOf="@id/privacy_policy_linear_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.198790"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/privacy_policy_linear_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_0"
            app:layout_constraintVertical_weight="0.55429">

            <ToggleButton
                android:id="@+id/accept_privacy_policy_checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:background="@drawable/accept_privacy_policy_button_custom"
                android:textOff=""
                android:textOn="" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textColor="@color/colorControlNormal"

                android:layout_marginStart="14dp"
                android:id="@+id/privacy_policy_textview"
                android:text="@string/privacy_policy_textview"
                android:fontFamily="@font/roboto_light_italic"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="14sp"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.25195"

        android:id="@+id/go_button"
        android:background="@drawable/sign_up_button_custom"
        android:text="@string/go_button"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="@id/guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_code_constraint_layout"/>

    <TextView
        android:id="@+id/error_text_view_0"
        android:layout_width="0dp"

        android:layout_marginTop="6dp"
        android:layout_height="13dp"
        android:alpha="0"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/error_string_1"
        android:textColor="@color/colorErrorPink"
        android:textSize="12sp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_button" />

</android.support.constraint.ConstraintLayout>